# brain_games-first_try

python-project-49-main/: Makefile  README.md  pyproject.toml
python-project-49-main/brain_games/: cli.py
python-project-49-main/brain_games/games/: calc.py  gcd.py  progression.py
python-project-49-main/brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_progression.py
