[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Denis <ad.way@mail.ri>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 

[tool.poetry.dependencies]
python = "^3.11"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.games.calc:main "
brain-gcd = "brain_games.games.gcd:main"
brain-progression = "brain_games.games.progression:main"